@@ -1,13 +1,15 @@
 SOURCEME_SH     = TDBSCAN_env.sh
 FE_WRAPPER      = TDBSCAN_FE 
 BE_WRAPPER      = TDBSCAN_BE
+LAUNCHER        = tdbscan-launcher
+SWEEP           = tdbscan-sweep
 DRAW_HULLS      = draw_hulls
 DRAW_STATS      = draw_stats
 EXPAND_NODELIST = sl_expand_nodelist.pl
 
-EXTRA_DIST = $(SOURCEME_SH) $(FE_WRAPPER) $(BE_WRAPPER) $(DRAW_HULLS) $(DRAW_STATS) $(EXPAND_NODELIST)
+EXTRA_DIST = $(SOURCEME_SH) $(LAUNCHER) $(LAUNCHER).py $(SWEEP) $(SWEEP).py $(FE_WRAPPER) $(BE_WRAPPER) $(DRAW_HULLS) $(DRAW_STATS) $(EXPAND_NODELIST)
 
-bin_SCRIPTS    = $(FE_WRAPPER) $(BE_WRAPPER) $(DRAW_HULLS) $(DRAW_STATS) $(EXPAND_NODELIST)
+bin_SCRIPTS    = $(LAUNCHER) $(LAUNCHER).py $(SWEEP) $(SWEEP).py $(FE_WRAPPER) $(BE_WRAPPER) $(DRAW_HULLS) $(DRAW_STATS) $(EXPAND_NODELIST)
 noinst_SCRIPTS = $(SOURCEME_SH)
 
 install-data-hook:
@@ -19,5 +21,11 @@ install-data-hook:
 	$(top_srcdir)/substitute-all $(SED) "@sub_CLUSTERING_LD_LIBRARY_PATH@" @CLUSTERING_LD_LIBRARY_PATH@ $(prefix)/etc
 	$(top_srcdir)/substitute     $(SED) "@sub_PREFIX@" ${prefix} $(bindir)/$(FE_WRAPPER)
 	$(top_srcdir)/substitute     $(SED) "@sub_PREFIX@" ${prefix} $(bindir)/$(BE_WRAPPER)
+	$(top_srcdir)/substitute     $(SED) "@sub_PREFIX@" ${prefix} $(bindir)/$(LAUNCHER)
+	$(top_srcdir)/substitute     $(SED) "@sub_PREFIX@" ${prefix} $(bindir)/$(LAUNCHER).py
+	$(top_srcdir)/substitute     $(SED) "@sub_MRNETAPP_HOME@" @MRNETAPP_HOME@ $(bindir)/$(LAUNCHER).py
+	$(top_srcdir)/substitute     $(SED) "@sub_PREFIX@" ${prefix} $(bindir)/$(SWEEP)
+	$(top_srcdir)/substitute     $(SED) "@sub_PREFIX@" ${prefix} $(bindir)/$(SWEEP).py
+	chmod a+x $(bindir)/$(LAUNCHER) $(bindir)/$(SWEEP)
 	chmod a+x $(bindir)/$(FE_WRAPPER) $(bindir)/$(BE_WRAPPER)
 	ln -fs `basename $(bindir)/$(FE_WRAPPER)` $(bindir)/TDBSCAN
