@@ -1,0 +1,3 @@
+#!/bin/bash
+
+python @sub_PREFIX@/bin/tdbscan-sweep.py $*
